--- a/build.gradle
+++ b/build.gradle
@@ -25,9 +25,10 @@ repositories {
 
 dependencies {
   implementation 'org.springframework.boot:spring-boot-starter'
-  compileOnly 'org.projectlombok:lombok'
+  implementation 'org.projectlombok:lombok'
   developmentOnly 'org.springframework.boot:spring-boot-devtools'
   annotationProcessor 'org.projectlombok:lombok'
+  testAnnotationProcessor 'org.projectlombok:lombok'
   testImplementation 'org.springframework.boot:spring-boot-starter-test'
   testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
