250722 SpringJPA Repository, Paging/Sort, Query Method, 스프링 MVC 기초 및 Thymeleaf 등 학습

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   config:
     import:
-      - optional:classpath:./secret/db.yml
+      - optional:classpath:secret/db.yml
   application:
     name: spring_basic
 
@@ -9,3 +9,9 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+    database-platform: org.hibernate.dialect.MariaDBDialect
+  thymeleaf:
+    cache: false
